objects/CS_orgcredentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CS_Custom_Domain__c</fullName>
        <label>Custom Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Disable_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Is_Developer_Hub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Developer Hub Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Org_Type__c</fullName>
        <label>Org Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Dev_Hub_Org__c</fullName>
        <label>ID_Dev Hub Org</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Org Credentials</label>
</CustomObject>